--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
           <td class="subtotal">$<span>0</span></td>
           <td class="action">
             <button class="btn btn-remove">Remove</button>
+            
+          </td>
+        </tr>
+        <tr class="product">
+          <td class="name">
+            <span>Ironhack tomato</span>
+          </td>
+          <td class="price">$<span>4.00</span></td>
+          <td class="quantity">
+            <input type="number" value="0" min="0" placeholder="Quantity" />
+          </td>
+          <td class="subtotal">$<span>0</span></td>
+          <td class="action">
+            <button class="btn btn-remove">Remove</button>
+            
           </td>
         </tr>
         <!-- Iteration 2: Add more products here -->
